--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#mustbe defined, otherwise will redirect to login. maybe springdoc having endpoint other than /v3
 springdoc.api-docs.path=/api-docs
+
+
+# initiated at first spring security initialization
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_oauth2
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
+spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED}
+spring.liquibase.database-change-log-lock-table=${DATABASE_CHANGE_LOG_LOCK}
+spring.liquibase.database-change-log-table=${DATABASE_CHANGE_LOG}
+spring.liquibase.contexts=main
