--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED}
 spring.liquibase.database-change-log-lock-table=${DATABASE_CHANGE_LOG_LOCK}
@@ -16,3 +16,5 @@ spring.liquibase.database-change-log-table=${DATABASE_CHANGE_LOG}
 spring.liquibase.contexts=main
 
 # spring.security.oauth2.client.registration.jdbc.create-schema=true
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=86400000
