--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.70</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+			<version>6.2.1</version>
+		</dependency>
+
 
 
 
