simple user, write ldap config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.liquibase.contexts=main
 # spring.security.oauth2.client.registration.jdbc.create-schema=true
 application.security.jwt.expiration=86400000
 application.security.jwt.refresh-token.expiration=86400000
+
+ldap.username.suffix=${loginSecret_NEW_LOGIN_LDAP_USERNAME_SUFFIX}
+login.ldap-host=${loginSecret_LOGIN_LDAP_HOST}
+login.ldap-port=${loginSecret_LOGIN_LDAP_PORT}
