back to 0 for user details implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #mustbe defined, otherwise will redirect to login. maybe springdoc having endpoint other than /v3
 springdoc.api-docs.path=/api-docs
-logging.level.org.springframework.security=trace
+# logging.level.org.springframework.security=trace
 
 # initiated at first spring security initialization
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_oauth2
